tdf#106466: Use graphite2 shaper first

We want to always prefer Graphite shaping when supported by the font,
which is also what HarfBuzz does by default.

Change-Id: I6670fc03b8e6b3d7e07e1b8e0062880524da1655
Reviewed-on: https://gerrit.libreoffice.org/35046
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Khaled Hosny <khaledhosny@eglug.org>